--- a/perfiles/templates/perfiles/perfil_usuario.html
+++ b/perfiles/templates/perfiles/perfil_usuario.html
@@ -93,14 +93,23 @@
 						<strong> {{act.0.libro.titulo}} </strong> de <strong> {{act.0.libro.autor}}</strong>!
 						</p>
 					{% elif act.0.tipo == "compartio_libro_abierto" %}
-						<div class="alert callout alert-default">
-							<div class="row">
-								<p> <a target="blank" href="{% url 'perfiles:perfil_usuario' act.0.perfil_actor.usuario.username %}">{{act.0.perfil_actor.usuario.username}}</a> compartió el libro 
-									<strong> {{act.0.libro.titulo}} </strong> de <strong> {{act.0.libro.autor}}</strong> 
-								con la comunidad de {{act.0.perfil_actor.ciudad.name}}.
-								</p>
-							</div>
-						</div>
+						<p> <a target="blank" href="{% url 'perfiles:perfil_usuario' act.0.perfil_actor.usuario.username %}">{{act.0.perfil_actor.usuario.username}}</a> compartió el libro 
+							<strong> {{act.0.libro.titulo}} </strong> de <strong> {{act.0.libro.autor}}</strong> 
+						con la comunidad de {{act.0.perfil_actor.ciudad.name}}.
+						</p>
+					{% elif act.0.tipo == "presto_libro" %}
+						<p> Prestó el libro 
+						<strong> {{act.0.libro.titulo}} </strong> de <strong> {{act.0.libro.autor}}</strong> 
+						a <a target="blank" href="{% url 'perfiles:perfil_usuario' act.0.perfil_target.usuario.username %}">{{act.0.perfil_target.usuario.username}}</a>.
+						</p>
+					{% elif act.0.tipo == "bcompartida_cambio" %}
+						<p> Cambió el libro <strong>{{act.0.segundo_libro.titulo}}</strong> de <strong>{{act.0.segundo_libro.autor}}</strong> por el libro <strong> {{act.0.libro.titulo}} </strong> de <strong> {{act.0.libro.autor}}</strong>
+						con la Biblioteca Compartida <a target="blank" href="{% url 'libros:biblioteca_compartida' act.0.biblioteca_compartida.slug %}">{{act.0.biblioteca_compartida.nombre}}</a>.
+						</p>
+					{% elif act.0.tipo == "bcompartida_presto" %}
+						<p> Recibió el libro <strong>{{act.0.libro.titulo}}</strong> de <strong>{{act.0.libro.autor}}</strong> 
+						de la Biblioteca Compartida <a target="blank" href="{% url 'libros:biblioteca_compartida' act.0.biblioteca_compartida.slug %}">{{act.0.biblioteca_compartida.nombre}}</a>.
+						</p>
 					{% endif %}
 					<div class = "hidden comments">
 						<br>
@@ -225,6 +234,7 @@
 	{% endif %}
 
 	{% if bibliotecas_compartidas %}
+		<hr class = "half-margins invisible">
 		{% for biblioteca in bibliotecas_compartidas %}
 		<div class = "well">
 			<img src="{{biblioteca.imagen}}" class="img-responsive circular pull-right">
