--- a/libros/templates/libros/libros_ciudad.html
+++ b/libros/templates/libros/libros_ciudad.html
@@ -189,7 +189,7 @@
 	<i class ="fa fa-info-circle"></i>
 	Los libros compartidos son libros <strong>físicos</strong> (no digitales) que los miembros de la comunidad han aceptado prestar. <br>
 	Para <strong>compartir</strong> un libro solamente necesitas escribir el título y el autor. <br> 
-	Para <strong>pedir prestado</strong> un libro, elige el libro y da click en Pedir Libro. El dueño del libro podrá decidir se prestarte basándose en la información de tu perfil: ¿Has prestado libros? ¿Has devuelto los libros que te han prestado?. <i class ="fa fa-thumbs-o-up"></i>
+	Para <strong>pedir prestado</strong> un libro, elige el libro y da click en Pedir Libro. El dueño del libro podrá decidir si prestarte basándose en la información de tu perfil: ¿Has prestado libros? ¿Has devuelto los libros que te han prestado?. <i class ="fa fa-thumbs-o-up"></i>
 	</p>
 
 	<!-- facebook -->
