social auth fixture

--- a/templates/mantenimiento.html
+++ b/templates/mantenimiento.html
@@ -37,7 +37,7 @@
 			<p>
 
 				<!-- custom text -->
-				Estamos cambiando, el <strong>Domingo 29 de Noviembre</strong> regresaremos. Reabriremos con <strong>Nuevas Funcionalidades</strong>!
+				Estamos cambiando, el <strong>Domingo 6 de Diciembre</strong> regresaremos. Reabriremos con <strong>Nuevas Funcionalidades</strong>!
 				<!-- /custom text -->
 
 			</p>
